# hq

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/Hq/: Allocator.h  BasicTypes.h  BinarySerializer.h  CompileMurmur.h  DynFreeList.h  Enumerate.h  FSM.h  Flags.h  FreeList.h  FreelistAllocator.h  Handle.h  Hash.h  IdPool.h  JobManager.h  JsonSerializer.h  LinearAllocator.h  NonCopyable.h  NotImplemented.h  PackUtils.h  PoolAllocator.h  PrintContainers.h  ProxyAllocator.h  Rng.h  Serializable.h  Serializer.h  SpinLock.h  StackAllocator.h  StateMachine.h  Streams.h  StringHash.h  Utils.h  concurrentqueue.h
include/Hq/Ecs/: HierarchicalComponent.h
include/Hq/Imgui/Inspection/: RttrImguiInspector.h
include/Hq/Math/: AABB.h  Box2.h  Box3.h  Frustum.h  Mat3x3.h  Mat4x4.h  Math.h  MathTypes.h  Plane.h  Quat.h  Ray.h  Ray2.h  Ray3.h  Sphere.h  Triangle.h  Utils.h  Vec2.h  Vec3.h  Vec4.h  Vector.h
src/: BinarySerializer.cpp  CMakeLists.txt  FreelistAllocator.cpp  Hq.cpp  JobManager.cpp  JsonSerializer.cpp  LinearAllocator.cpp  PoolAllocator.cpp  ProxyAllocator.cpp  Rng.cpp  StackAllocator.cpp  StringHash.cpp
src/Ecs/: Ecs.cpp
src/Imgui/Inspection/: RttrImguiInspector.cpp
src/Math/: Math.cpp  Utils.cpp
src/Reflect/: ReflectMath.cpp
tests/: CMakeLists.txt  math.cpp
